--- a/src/components/tiles/Triangle.astro
+++ b/src/components/tiles/Triangle.astro
@@ -1,8 +1,14 @@
 ---
-const { color1, color2, color3, color4 } = Astro.props
+const { width, height, color1, color2, color3, color4 } = Astro.props
 ---
 
-<svg xmlns="http://www.w3.org/2000/svg" class="triangle" viewBox="0 0 100 100">
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  class="triangle"
+  viewBox="0 0 100 100"
+  width={width}
+  height={height}
+>
   <polygon fill=`${color1}` points="0,0 100,0 50,50"></polygon>
   <polygon fill=`${color2}` points="0,0 0,100 50,50"></polygon>
   <polygon fill=`${color3}` points="0,100 100,100 50,50"></polygon>
