--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,10 @@ const tilesType = [Square, Triangle]
 const palette = await randomPalette()
 
 const numberOfColumns = 30
-const numberOfTiles = numberOfColumns * numberOfColumns
+const numberOfRows = 30
+const numberOfTiles = numberOfColumns * numberOfRows
+const tileWidth = 100
+const tileHeight = tileWidth
 
 const createTile = () => {
   const color1 = randomColor(palette)
@@ -35,11 +38,29 @@ const createTile = () => {
 const tiles = Array.from({ length: numberOfTiles }, createTile)
 ---
 
+<style
+  define:vars={{
+    numberOfColumns,
+    numberOfRows,
+    width: tileWidth + "px",
+    height: tileHeight + "px",
+  }}
+>
+  .tiles {
+    display: grid;
+    grid-template-columns: repeat(var(--numberOfColumns), var(--width));
+    grid-template-rows: repeat(var(--numberOfRows), var(--height));
+    place-content: center;
+  }
+</style>
+
 <Layout>
-  <div class="grid grid-cols-[repeat(30,100px)] grid-rows-[repeat(30,100px)] place-content-center">
+  <div class="tiles">
     {
       tiles.map((Tile) => (
         <Tile.randomTile
+          width={tileWidth}
+          height={tileHeight}
           color1={Tile.color1}
           color2={Tile.color2}
           color3={Tile.color3}
