use react for clentside js

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,72 +1,8 @@
 ---
-import Square from "#components/tiles/Square.astro"
-import Triangle from "#components/tiles/Triangle.astro"
+import Mosaic from "#components/mosaic/Mosaic.tsx"
 import Layout from "#layouts/Layout.astro"
-
-type Palette = [string, string, string, string, string]
-
-const randomPalette = async () => {
-  const palettes = (await fetch("https://unpkg.com/nice-color-palettes@3.0.0/100.json").then(
-    (response) => response.json()
-  )) as Palette[]
-  const palette = palettes[Math.floor(Math.random() * palettes.length)]
-  return palette as Palette
-}
-
-const randomColor = (palette: string[]) => {
-  return palette[Math.floor(Math.random() * palette.length)]
-}
-
-const tilesType = [Square, Triangle]
-const palette = await randomPalette()
-
-const numberOfColumns = 30
-const numberOfRows = 30
-const numberOfTiles = numberOfColumns * numberOfRows
-const tileWidth = 100
-const tileHeight = tileWidth
-
-const createTile = () => {
-  const color1 = randomColor(palette)
-  const color2 = randomColor(palette)
-  const color3 = randomColor(palette)
-  const color4 = randomColor(palette)
-  const randomTile = tilesType[Math.floor(Math.random() * tilesType.length)]
-  return { color1, color2, color3, color4, randomTile }
-}
-
-const tiles = Array.from({ length: numberOfTiles }, createTile)
 ---
 
-<style
-  define:vars={{
-    numberOfColumns,
-    numberOfRows,
-    width: tileWidth + "px",
-    height: tileHeight + "px",
-  }}
->
-  .tiles {
-    display: grid;
-    grid-template-columns: repeat(var(--numberOfColumns), var(--width));
-    grid-template-rows: repeat(var(--numberOfRows), var(--height));
-    place-content: center;
-  }
-</style>
-
 <Layout>
-  <div class="tiles">
-    {
-      tiles.map((Tile) => (
-        <Tile.randomTile
-          width={tileWidth}
-          height={tileHeight}
-          color1={Tile.color1}
-          color2={Tile.color2}
-          color3={Tile.color3}
-          color4={Tile.color4}
-        />
-      ))
-    }
-  </div>
+  <Mosaic client:load numberOfColumns={10} numberOfRows={10} tileWidth={100} tileHeight={100} />
 </Layout>
