--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,44 @@
 ---
-import Mosaic from "#components/mosaic/Mosaic.tsx"
+import { links } from "#constants/links.ts"
 import Layout from "#layouts/Layout.astro"
 ---
 
 <Layout>
-  <section class="h-dvh w-dvw">
-    <Mosaic client:load tileWidthPx={100} tileHeightPx={100} />
-  </section>
+  <header>
+    <nav class="bg-white border-gray-200 dark:bg-gray-900">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
+            <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
+            <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
+            <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
+            <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
+          </svg>
+          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+            >Mosaic</span
+          >
+        </a>
+
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+          <ul
+            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+          >
+            {
+              links.map((link) => (
+                <li>
+                  <a
+                    href={link.url}
+                    class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                    aria-current="page"
+                  >
+                    {link.title}
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 </Layout>
