fix the shuffleobject function

--- a/src/pages/mosaic/mosaic1/index.astro
+++ b/src/pages/mosaic/mosaic1/index.astro
@@ -5,6 +5,6 @@ import Layout from "#layouts/Layout.astro"
 
 <Layout>
   <section class="h-dvh w-dvw">
-    <Mosaic client:load tileWidthPx={100} tileHeightPx={100} />
+    <Mosaic client:load tileWidth={100} tileHeight={100} />
   </section>
 </Layout>
