--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import Layout from "#layouts/Layout.astro"
 
 <Layout>
   <header>
-    <nav class="bg-white border-gray-200 dark:bg-gray-900">
-      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <nav>
+      <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-4">
         <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
             <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
@@ -14,23 +14,17 @@ import Layout from "#layouts/Layout.astro"
             <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
             <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
           </svg>
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Mosaic</span
-          >
+          <span class="self-center whitespace-nowrap text-2xl font-semibold">Mosaic</span>
         </a>
 
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
           <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+            class="mt-4 flex flex-col rounded-lg p-4 font-medium md:mt-0 md:flex-row md:space-x-8 md:p-0"
           >
             {
               links.map((link) => (
                 <li>
-                  <a
-                    href={link.url}
-                    class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
-                    aria-current="page"
-                  >
+                  <a href={link.url} class="block rounded px-3 py-2 md:p-0" aria-current="page">
                     {link.title}
                   </a>
                 </li>
