--- a/src/pages/mosaic/mosaic-svg/index.astro
+++ b/src/pages/mosaic/mosaic-svg/index.astro
@@ -1,10 +1,10 @@
 ---
-import Mosaic from "#components/mosaic/Mosaic.tsx"
 import Layout from "#layouts/Layout.astro"
+import MosaicSvg from "./_mosaic-svg"
 ---
 
 <Layout>
   <section class="h-dvh w-dvw">
-    <Mosaic client:load tileWidth={64} tileHeight={64} />
+    <MosaicSvg client:load />
   </section>
 </Layout>
