--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "#layouts/Layout.astro"
   <header>
     <nav>
       <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-4">
-        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="/astrotiles" class="flex items-center space-x-3 rtl:space-x-reverse">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
             <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
             <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
