improve responsive layout

--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -4,7 +4,7 @@ import MosaicPage from "./_mosaic-page"
 ---
 
 <Layout>
-  <section class="h-dvh w-dvw">
+  <section>
     <MosaicPage client:load />
   </section>
 </Layout>
