--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,21 @@
 ---
-import { links } from "#constants/links.ts"
 import Layout from "#layouts/Layout.astro"
+import Navigation from "#layouts/Navigation.tsx"
+import ModeToggle from "#widgets/ModeToggle.tsx"
 ---
 
 <Layout>
-  <header>
-    <nav>
-      <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-4">
-        <a href="/astrotiles" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
-            <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
-            <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
-            <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
-            <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
-          </svg>
-          <span class="self-center whitespace-nowrap text-2xl font-semibold">Mosaic</span>
-        </a>
-
-        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-          <ul
-            class="mt-4 flex flex-col rounded-lg p-4 font-medium md:mt-0 md:flex-row md:space-x-8 md:p-0"
-          >
-            {
-              links.map((link) => (
-                <li>
-                  <a href={link.url} class="block rounded px-3 py-2 md:p-0" aria-current="page">
-                    {link.title}
-                  </a>
-                </li>
-              ))
-            }
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <header class="mx-auto flex max-w-screen-xl items-center gap-10 p-4">
+    <a href="/astrotiles" class="mr-auto flex items-center space-x-3">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
+        <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
+        <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
+        <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
+        <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
+      </svg>
+      <span class="self-center whitespace-nowrap text-2xl font-semibold">Mosaic</span>
+    </a>
+    <Navigation />
+    <ModeToggle client:load />
   </header>
 </Layout>
