--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -1,10 +1,10 @@
 ---
+import Mosaic from "#components/mosaic/Mosaic.tsx"
 import Layout from "#layouts/Layout.astro"
-import MosaicPage from "./_mosaic-page"
 ---
 
 <Layout>
   <section>
-    <MosaicPage client:load />
+    <Mosaic tileWidth={64} tileHeight={64} client:load />
   </section>
 </Layout>
