--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro"
-import Navigation from "@layouts/Navigation"
 import ModeToggle from "@widgets/ModeToggle"
+import Navigation from "@widgets/Navigation"
 ---
 
 <Layout>
