--- a/src/components/mosaic/tiles/tile.module.css
+++ b/src/components/mosaic/tiles/tile.module.css
@@ -1,6 +1,20 @@
 .tile {
+  --opacity: 1;
+
   width: var(--tile-width);
   height: var(--tile-height);
   position: relative;
   overflow: hidden;
+
+  opacity: var(--opacity);
+  transition:
+    opacity 0.2s ease-in-out,
+    background-color 1s ease-in-out,
+    transform 1s ease-in-out;
+}
+
+.tile > * {
+  transition-property: background-color;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out;
 }
