--- a/src/components/mosaic/tiles/tile.module.css
+++ b/src/components/mosaic/tiles/tile.module.css
@@ -11,6 +11,10 @@
     opacity 0.2s ease-in-out,
     background-color 1s ease-in-out,
     transform 1s ease-in-out;
+
+  @starting-style {
+    opacity: 0;
+  }
 }
 
 .tile > * {
