change name of the repo and update config

--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -3,7 +3,7 @@ import Mosaic from "@components/mosaic/Mosaic"
 import Layout from "@layouts/Layout.astro"
 ---
 
-<Layout>
+<Layout title="Mosaic">
   <section>
     <Mosaic client:load />
   </section>
