--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
 import "@styles/global.css"
+
+const baseUrl = import.meta.env.BASE_URL
+const { title } = Astro.props
 ---
 
 <script is:inline>
@@ -25,9 +28,9 @@ import "@styles/global.css"
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/astrotiles/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href=`${baseUrl}favicon.svg` />
     <meta name="generator" content={Astro.generator} />
-    <title>Astrotiles</title>
+    <title>{`Playground-v1 - ${title || "Astro"}`}</title>
   </head>
   <body>
     <slot />
