--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href=`${baseUrl}favicon.svg` />
+    <link rel="icon" type="image/svg+xml" href=`${baseUrl}/favicon.svg` />
     <meta name="generator" content={Astro.generator} />
     <title>{`Playground-v1 - ${title || "Astro"}`}</title>
   </head>
