debounce in the one place where it s needed.

--- a/src/pages/piechart/index.astro
+++ b/src/pages/piechart/index.astro
@@ -5,12 +5,12 @@ import Layout from "@layouts/Layout.astro"
 ---
 
 <Layout title="Piechart">
-  <Header />
+  <Header title="Piechart" />
   <section class="mx-auto max-w-screen-xl p-4">
-    <h1 class="mb-4 text-2xl">Piechart</h1>
     <p>
-      <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Graphicart tutorial"
-        >Graphicart tutorial</a>
+      <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Grafikart tutorial"
+        >Grafikart tutorial</a
+      >
     </p>
     <Piechart />
   </section>
