--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href=`${baseUrl}/favicon.svg` />
     <meta name="generator" content={Astro.generator} />
-    <title>{`Playground-v1 - ${title || "Astro"}`}</title>
+    <title>{`Playground-v1 - ${title ?? "Home"}`}</title>
   </head>
   <body>
     <slot />
