--- a/src/components/mosaic/tiles/tile.module.css
+++ b/src/components/mosaic/tiles/tile.module.css
@@ -9,8 +9,7 @@
   opacity: var(--opacity);
   transition:
     opacity 1s ease-in-out,
-    background-color 1s ease-in-out,
-    transform 1s ease-in-out;
+    background 1s ease-in-out;
 
   @starting-style {
     opacity: 0;
@@ -18,7 +17,7 @@
 }
 
 .tile > * {
-  transition-property: background-color;
-  transition-duration: 1s;
-  transition-timing-function: ease-in-out;
+  transition:
+    background 1s ease-in-out,
+    background 1s ease-in-out;
 }
