change prettier conf to semi= true to avoid possible conflicts in code

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,9 +1,9 @@
 ---
-import ModeToggle from "@widgets/ModeToggle"
-import Navigation from "@widgets/Navigation"
+import ModeToggle from "@widgets/ModeToggle";
+import Navigation from "@widgets/Navigation";
 
-const baseUrl = import.meta.env.BASE_URL
-const { title } = Astro.props
+const baseUrl = import.meta.env.BASE_URL;
+const { title } = Astro.props;
 ---
 
 <header class="mx-auto flex max-w-screen-xl items-center gap-10 p-4">
