--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -1,6 +1,6 @@
 ---
-import Mosaic from "@components/mosaic/Mosaic"
-import Layout from "@layouts/Layout.astro"
+import Mosaic from "@components/mosaic/Mosaic";
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Mosaic">
