--- a/src/pages/racaman/index.astro
+++ b/src/pages/racaman/index.astro
@@ -1,6 +1,6 @@
 ---
-import Racaman from "@/components/racaman/Racaman"
-import Layout from "@layouts/Layout.astro"
+import Racaman from "@/components/racaman/Racaman";
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Racaman">
