--- a/src/pages/piechart/index.astro
+++ b/src/pages/piechart/index.astro
@@ -1,7 +1,7 @@
 ---
-import Piechart from "@/components/piechart/piechart.astro"
-import Header from "@/layouts/Header.astro"
-import Layout from "@layouts/Layout.astro"
+import Piechart from "@/components/piechart/piechart.astro";
+import Header from "@/layouts/Header.astro";
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Piechart">
