--- a/src/pages/piechart/index.astro
+++ b/src/pages/piechart/index.astro
@@ -6,12 +6,12 @@ import Layout from "@layouts/Layout.astro";
 
 <Layout title="Piechart">
   <Header title="Piechart" />
-  <section class="mx-auto max-w-screen-xl p-4">
+  <main class="mx-auto max-w-screen-xl p-4">
     <p>
       <a href="https://grafikart.fr/tutoriels/graph-pie-camembert-1965" title="Grafikart tutorial"
         >Grafikart tutorial</a
       >
     </p>
     <Piechart />
-  </section>
+  </main>
 </Layout>
