--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,4 +1,5 @@
 ---
+import { routes } from "@/constants/routes";
 import ModeToggle from "@widgets/ModeToggle";
 import Navigation from "@widgets/Navigation";
 
@@ -17,6 +18,6 @@ const { title } = Astro.props;
     <span class="self-center whitespace-nowrap text-2xl font-semibold">{title ?? "Playground"}</span
     >
   </a>
-  <Navigation />
+  <Navigation routes={routes} />
   <ModeToggle client:load />
 </header>
