--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@styles/global.css";
+import Header from "@/layouts/Header.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
 const { title } = Astro.props;
@@ -32,7 +33,10 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{`Playground-v1 - ${title ?? "Home"}`}</title>
   </head>
-  <body>
-    <slot />
+  <body class="grid min-h-screen grid-rows-[auto_1fr] bg-background text-foreground">
+    <Header title={title} />
+    <main class="container mx-auto flex flex-col">
+      <slot />
+    </main>
   </body>
 </html>
