--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
-import Header from "@/layouts/Header.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout>
-  <Header title="Playground" />
-</Layout>
+<Layout title="Playground" />
