--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
   </head>
   <body class="grid min-h-screen grid-rows-[auto_1fr] bg-background text-foreground">
     <Header title={title} />
-    <main class="container mx-auto flex flex-col">
+    <main class="flex w-full flex-col">
       <slot />
     </main>
   </body>
