--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <header class="mx-auto flex w-full items-center gap-10 py-4">
-  <a href={baseUrl} class="mr-auto flex items-center space-x-3">
+  <a href={baseUrl} class="mr-auto flex items-center space-x-3 px-4 py-1.5">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
       <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
       <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
@@ -18,5 +18,4 @@ const { title } = Astro.props;
     >
   </a>
   <Navigation routes={routes} />
-  <!-- <ModeToggle client:load /> -->
 </header>
