--- a/src/pages/color-wheel/index.astro
+++ b/src/pages/color-wheel/index.astro
@@ -3,6 +3,6 @@ import ColorWheel from "@/components/color-wheel/color-wheel";
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="Mosaic">
+<Layout title="Color wheel">
   <ColorWheel client:load />
 </Layout>
