--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{`Playground-v1 - ${title ?? "Home"}`}</title>
   </head>
-  <body class="grid min-h-screen grid-rows-[auto_1fr] bg-background text-foreground">
+  <body class="grid min-h-svh grid-rows-[auto_1fr] bg-background text-foreground">
     <Header title={title} />
     <main class="px-4">
       <slot />
