--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,4 +1,5 @@
 ---
+import ToggleTheme from "@/components/widgets/ToggleTheme.astro";
 import { routes } from "@/constants/routes";
 import Navigation from "@widgets/Navigation";
 
@@ -18,4 +19,5 @@ const { title } = Astro.props;
     >
   </a>
   <Navigation routes={routes} />
+  <ToggleTheme />
 </header>
