--- a/src/components/widgets/themeToggle.astro
+++ b/src/components/widgets/themeToggle.astro
@@ -1,5 +1,8 @@
-<button id="theme-toggle" class="px-4 py-1.5">
-  <span class="sr-only">Toggle theme</span>
+<label
+  aria-label="Toggle theme"
+  class="cursor-pointer items-center rounded-md px-2 py-1.5 text-sm font-medium outline-none has-[:focus]:bg-accent has-[:focus]:text-accent-foreground"
+>
+  <input id="theme-toggle" name="theme" class="peer sr-only" type="checkbox" checked value="dark" />
   <svg
     id="theme-icon-dark"
     xmlns="http://www.w3.org/2000/svg"
@@ -7,7 +10,7 @@
     viewBox="0 0 24 24"
     stroke-width="1.5"
     stroke="currentColor"
-    class="hidden size-6"
+    class="block size-6 peer-checked:hidden"
   >
     <path
       stroke-linecap="round"
@@ -22,7 +25,7 @@
     viewBox="0 0 24 24"
     stroke-width="1.5"
     stroke="currentColor"
-    class="hidden size-6"
+    class="hidden size-6 peer-checked:block"
   >
     <path
       stroke-linecap="round"
@@ -30,41 +33,17 @@
       d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
     ></path>
   </svg>
-</button>
+</label>
 
 <script is:inline>
-  const getThemePreference = () => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
-    }
-    return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
-  };
-
-  const isDark = getThemePreference() === "dark";
-  document.documentElement.classList[isDark ? "add" : "remove"]("dark");
-
   const themeToggle = document.getElementById("theme-toggle");
-  const themeIconDark = document.getElementById("theme-icon-dark");
-  const themeIconLight = document.getElementById("theme-icon-light");
 
-  if (isDark) {
-    themeIconLight?.classList.remove("hidden");
-  } else {
-    themeIconDark?.classList.remove("hidden");
-  }
-
-  const toggleTheme = () => {
+  if (themeToggle) {
     const isDark = document.documentElement.classList.contains("dark");
-    themeIconDark?.classList.toggle("hidden", isDark);
-    themeIconLight?.classList.toggle("hidden", !isDark);
-  };
-
-  themeToggle?.addEventListener("click", () => {
-    document.documentElement.classList.toggle("dark");
-    toggleTheme();
-    localStorage.setItem(
-      "theme",
-      document.documentElement.classList.contains("dark") ? "dark" : "light"
-    );
-  });
+    themeToggle.checked = isDark;
+    themeToggle.addEventListener("click", () => {
+      document.documentElement.classList.toggle("dark");
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    });
+  }
 </script>
