--- a/src/components/mosaic/tiles/tile.module.css
+++ b/src/components/mosaic/tiles/tile.module.css
@@ -6,7 +6,8 @@
 
   transition:
     opacity 1s ease-in-out,
-    background 1s ease-in-out;
+    background 1s ease-in-out,
+    border 1s ease-in-out;
 }
 
 .tile > * {
