--- a/src/components/mosaic/tiles/tile.module.css
+++ b/src/components/mosaic/tiles/tile.module.css
@@ -7,7 +7,8 @@
   transition:
     opacity 1s ease-in-out,
     background 1s ease-in-out,
-    border-color 1s ease-in-out;
+    border-color 1s ease-in-out,
+    transform 1s ease-in-out;
 }
 
 .tile > * {
