--- a/src/pages/color-wheel/index.astro
+++ b/src/pages/color-wheel/index.astro
@@ -4,5 +4,5 @@ import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Color wheel">
-  <ColorWheel client:load />
+  <ColorWheel client:idle />
 </Layout>
