--- a/src/components/mosaic/tiles/tile.module.css
+++ b/src/components/mosaic/tiles/tile.module.css
@@ -1,20 +1,17 @@
 .tile {
-  width: var(--tile-width);
-  height: var(--tile-height);
-  position: relative;
-  overflow: hidden;
+	width: var(--tile-width);
+	height: var(--tile-height);
+	position: relative;
+	overflow: hidden;
 
-  transition:
-    opacity 1s ease-in-out,
-    background 1s ease-in-out,
-    border-color 1s ease-in-out,
-    transform 1s ease-in-out;
+	transition: opacity 1s ease-in-out, background 1s ease-in-out, border-color 1s
+		ease-in-out, transform 1s ease-in-out;
 }
 
 .tile > * {
-  transition: background 1s ease-in-out;
+	transition: background 1s ease-in-out;
 }
 
 .tile polygon {
-  transition: fill 1s ease-in-out;
+	transition: fill 1s ease-in-out;
 }
