replace default import with named import. and fix the biome reported issues

--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -1,5 +1,5 @@
 ---
-import Mosaic from "@components/mosaic/Mosaic";
+import { Mosaic } from "@components/mosaic/Mosaic";
 import Layout from "@layouts/Layout.astro";
 ---
 
