--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,7 +1,7 @@
 ---
-import Navigation from "@widgets/Navigation";
-import ThemeToogle from "@widgets/themeToggle.astro";
 import { routes } from "@/constants/routes";
+import { Navigation } from "@widgets/Navigation";
+import ThemeToogle from "@widgets/themeToggle.astro";
 
 const baseUrl = import.meta.env.BASE_URL;
 const { title } = Astro.props;
