--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href=`${baseUrl}/favicon.svg` />
     <meta name="generator" content={Astro.generator} />
-    <title>{`Playground-v1 - ${title ?? "Home"}`}</title>
+    <title>{`Playground - ${title ?? "Home"}`}</title>
   </head>
   <body class="grid min-h-svh grid-rows-[auto_1fr]">
     <Header title={title} />
