--- a/src/pages/color-wheel/index.astro
+++ b/src/pages/color-wheel/index.astro
@@ -4,5 +4,7 @@ import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Color wheel">
+  <main class="px-4 pb-4">
   <ColorWheel client:idle />
+</main>
 </Layout>
