--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -4,5 +4,5 @@ import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Mosaic">
-  <MosaicProvider client:idle />
+  <MosaicProvider client:only="react" />
 </Layout>
