--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,8 +33,10 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{`Playground - ${title ?? "Home"}`}</title>
   </head>
-  <body class="min-h-svh flex flex-col">
+  <body class="min-h-svh grid grid-rows-[auto,1fr]">
     <Header title={title} />
-      <slot />
+      <main>
+        <slot />
+      </main>
   </body>
 </html>
