small impr on navbar

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -7,8 +7,8 @@ const baseUrl = import.meta.env.BASE_URL;
 const { title } = Astro.props;
 ---
 
-<header class="mx-auto flex w-full items-center gap-4 py-4">
-  <a href={baseUrl} class="mr-auto flex items-center space-x-3 px-4 py-1.5">
+<header class="mx-auto flex flex-wrap items-center gap-4 py-4">
+  <a href={baseUrl} class="mr-auto flex items-center gap-3 px-4 py-1.5">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
       <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
       <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
