--- a/src/components/widgets/Navbar.astro
+++ b/src/components/widgets/Navbar.astro
@@ -11,17 +11,17 @@ const { title } = Astro.props;
 const { routes } = Astro.props;
 ---
 
-<nav class="border-gray-200">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+<nav class="border-gray-200 py-2">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
 
-    <a href={baseUrl} class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href={baseUrl} class="flex items-center gap-3">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
         <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
         <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
         <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
         <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
       </svg>
-      <span class="self-center text-2xl font-semibold whitespace-nowrap">{title ?? "Playground"}</span
+      <span class="text-2xl font-semibold whitespace-nowrap">{title ?? "Playground"}</span
       >
     </a>
  
@@ -32,18 +32,12 @@ const { routes } = Astro.props;
         </svg>
     </button>
 
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 md:mt-0">
+    <div class="hidden w-full md:w-auto font-medium md:flex flex-col md:flex-row md:gap-8"  id="navbar-default">
         { routes.map((route) => (
-          <li>
-          <a href={route.url} class="block py-2 px-3 md:p-0" aria-current="page">{route.text}</a>
-        </li>
+          <a href={route.url} class="block py-2 px-4 hover:bg-primary hover:text-primary-foreground rounded-lg transition-colors" aria-current="page">{route.text}</a>
         ))
         }
-        <li>
           <ThemeToggle />
-        </li>
-      </ul>
 
     </div>
   </div>
