--- a/src/components/widgets/themeToggle.astro
+++ b/src/components/widgets/themeToggle.astro
@@ -1,6 +1,6 @@
 <label
   aria-label="Toggle theme"
-  class="cursor-pointer block py-2 px-3 md:p-0 items-center rounded-md text-sm font-medium outline-none has-[:focus]:bg-accent has-[:focus]:text-accent-foreground"
+  class="cursor-pointer block py-2 px-4 items-center rounded-md text-sm font-medium outline-none has-[:focus]:bg-accent has-[:focus]:text-accent-foreground"
 >
   <input id="theme-toggle" name="theme" class="peer sr-only" type="checkbox" value="dark" />
   <svg
