--- a/src/components/widgets/Navbar.astro
+++ b/src/components/widgets/Navbar.astro
@@ -14,14 +14,14 @@ const { routes } = Astro.props;
 <nav class="border-gray-200 py-2">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
 
-    <a href={baseUrl} class="flex items-center gap-3">
+    <a href={baseUrl} class="flex items-center gap-3 group outline-none">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
         <rect fill="#331436" x="0" y="0" width="1" height="1"></rect>
         <rect fill="#eb9961" x="1" y="0" width="1" height="1"></rect>
         <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
         <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
       </svg>
-      <span class="text-2xl font-semibold whitespace-nowrap">{title ?? "Playground"}</span
+      <span class="text-2xl font-semibold whitespace-nowrap py-2 px-4 group-hover:bg-primary group-hover:text-primary-foreground rounded-lg transition-colors group-focus:bg-accent group-focus:text-accent-foreground">{title ?? "Playground"}</span
       >
     </a>
  
@@ -34,7 +34,7 @@ const { routes } = Astro.props;
 
     <div class="hidden w-full md:w-auto font-medium md:flex flex-col md:flex-row md:gap-8"  id="navbar-default">
         { routes.map((route) => (
-          <a href={route.url} class="block py-2 px-4 hover:bg-primary hover:text-primary-foreground rounded-lg transition-colors" aria-current="page">{route.text}</a>
+          <a href={route.url} class="outline-none block py-2 px-4 hover:bg-primary hover:text-primary-foreground rounded-lg transition-colors focus:bg-accent focus:text-accent-foreground" aria-current="page">{route.text}</a>
         ))
         }
           <ThemeToggle />
