back to eslint. biome do not handle astro

--- a/src/components/widgets/themeToggle.astro
+++ b/src/components/widgets/themeToggle.astro
@@ -1,6 +1,6 @@
 <label
   aria-label="Toggle theme"
-  class="cursor-pointer block py-2 px-4 items-center hover:bg-primary hover:text-primary-foreground rounded-lg text-sm font-medium outline-none has-[:focus]:bg-accent has-[:focus]:text-accent-foreground"
+  class="cursor-pointer block py-2 px-4 items-center hover:bg-primary hover:text-primary-foreground rounded-lg text-sm font-medium outline-none has-[:focus-visible]:bg-accent has-[:focus-visible]:text-accent-foreground"
 >
   <input id="theme-toggle" name="theme" class="peer sr-only" type="checkbox" value="dark" />
   <svg
