--- a/src/components/widgets/Navbar.astro
+++ b/src/components/widgets/Navbar.astro
@@ -21,11 +21,11 @@ const { routes } = Astro.props;
         <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
         <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
       </svg>
-      <span class="text-2xl font-semibold whitespace-nowrap py-2 px-4 group-hover:bg-primary group-hover:text-primary-foreground rounded-lg transition-colors group-focus:bg-accent group-focus:text-accent-foreground">{title ?? "Playground"}</span
+      <span class="text-2xl font-semibold whitespace-nowrap py-2 px-4 group-hover:bg-primary group-hover:text-primary-foreground rounded-lg transition-colors group-focus-visible:bg-accent group-focus-visible:text-accent-foreground">{title ?? "Playground"}</span
       >
     </a>
  
-    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center w-8 h-8 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center w-8 h-8 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus-visible:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
@@ -34,7 +34,7 @@ const { routes } = Astro.props;
 
     <div class="hidden w-full md:w-auto font-medium md:flex flex-col md:flex-row md:gap-8"  id="navbar-default">
         { routes.map((route) => (
-          <a href={route.url} class="outline-none block py-2 px-4 hover:bg-primary hover:text-primary-foreground rounded-lg transition-colors focus:bg-accent focus:text-accent-foreground" aria-current="page">{route.text}</a>
+          <a href={route.url} class="outline-none block py-2 px-4 hover:bg-primary hover:text-primary-foreground rounded-lg transition-colors focus-visible:bg-accent focus-visible:text-accent-foreground" aria-current="page">{route.text}</a>
         ))
         }
           <ThemeToggle />
