--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -5,6 +5,6 @@ import Navbar from "@components/widgets/Navbar.astro";
 const { title } = Astro.props;
 ---
 
-<header>
+<header class="transition-all">
   <Navbar routes={routes} title={title} />
 </header>
