--- a/src/components/widgets/Navbar.astro
+++ b/src/components/widgets/Navbar.astro
@@ -74,10 +74,12 @@ const { routes } = Astro.props;
     {
       routes.map((route) => {
         const isCurrent = Astro.url.pathname === route.url;
+        console.log("pathname", Astro.url.pathname);
+        console.log("route.url", route.url);
 
         return (
           <a
-            href={route.url}
+            href={`${baseUrl}/${route.url}`}
             class={cn(
               "block rounded-lg px-4 py-2 text-foreground outline-none transition-colors",
               "hover:bg-primary hover:text-primary-foreground",
