move logic into separte file and hook

--- a/src/pages/mosaic/index.astro
+++ b/src/pages/mosaic/index.astro
@@ -1,8 +1,8 @@
 ---
-import { MosaicBuilder } from "@/components/mosaic-builder/Mosaic-builder";
+import { MosaicMaker } from "@/components/mosaic-maker/Mosaic-maker";
 import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Mosaic">
-  <MosaicBuilder client:only="react" />
+  <MosaicMaker client:only="react" />
 </Layout>
